Moved test servers to the correct OU

--- a/roles/sssd_adgpo_test/tasks/main.yml
+++ b/roles/sssd_adgpo_test/tasks/main.yml
@@ -27,5 +27,10 @@
 - include: OUs.yml
   with_items: "{{ test_ous }}"
 
+- include: move2ou.yml
+  with_items: "{{ groups['samba_clients'] }}"
+  vars:
+    dest_OU: "{{ test_ous[0].name }}"
+
 - include: gpoobj.yml
   with_items: "{{ test_gpos }}"
