--- a/roles/sssd_adgpo_test/defaults/main.yml
+++ b/roles/sssd_adgpo_test/defaults/main.yml
@@ -14,3 +14,8 @@ test_gpos:
 
 test_ous:
   - name: SSSD Test Servers
+
+# extra_apt_repos:
+#  - name: localsssd
+#    description: SSSD 1.16.3 (locally built)
+#    entry: http://_hypervisor:8000/sssd p8 x86_64
