Install the iconv tool
Necessary for converting GPO files to UTF-16 encoding (alas ansible
can't do this on its own).

--- a/roles/sssd_adgpo_test/tasks/main.yml
+++ b/roles/sssd_adgpo_test/tasks/main.yml
@@ -15,6 +15,10 @@
   package: name=libsasl2-plugin-gssapi state=present
   become: true
 
+- name: install iconv tool
+  package: name=iconv state=present
+  become: true
+
 - include: testuser.yml
 
 - include: OUs.yml
