--- a/roles/sssd_adgpo_test/tasks/extra_apt_repo.yml
+++ b/roles/sssd_adgpo_test/tasks/extra_apt_repo.yml
@@ -3,7 +3,7 @@
 - name: "add APT repo {{ item.name }}"
   template:
     src: ./templates/apt_sources.list.j2
-    dest: "/etc/apt/sources.list.d/{{ item.name }}"
+    dest: "/etc/apt/sources.list.d/{{ item.name }}.list"
     owner: root
     group: root
     mode: 0644
