OUs: handle OUs with a slash symbol ('/') in the name

--- a/roles/sssd_adgpo_test/tasks/OUs.yml
+++ b/roles/sssd_adgpo_test/tasks/OUs.yml
@@ -15,7 +15,8 @@
 
 - set_fact:
     ou_exists: "{{ ou_guid != '' }}"
-    ou_ldif_path: "/tmp/ou_{{ samba_realm }}_{{ item.name|replace(' ', '_') }}.ldif"
+    ou_ldif_path: "/tmp/ou_{{ samba_realm }}_{{ item.name|replace(' ', '_')|replace('/', '_') }}.ldif"
+
 
 - name: create OU LDIF
   template:
