Move test computers to different OUs
So the test user will be granted access to ones in `Allow Login' OU,
and denied access to the `Deny Login' and the `Allow/Deny Login' OUs

--- a/roles/sssd_adgpo_test/tasks/main.yml
+++ b/roles/sssd_adgpo_test/tasks/main.yml
@@ -50,9 +50,12 @@
 
 - include: move2ou.yml
   when: samba_flavor == 'master'
-  with_items: "{{ groups['samba_clients'] }}"
   vars:
-    dest_OU: "{{ test_ous[0].name }}"
+    dest_OU: "{{ test_ous[idx|int].name }}"
+    item: "{{ groups['samba_clients'][idx|int] }}"
+  with_items: "{{ range(0, test_ous|length|int)|list }}"
+  loop_control:
+    loop_var: idx
 
 - include: gpoobj.yml
   with_items: "{{ test_gpos }}"
