Make sure GPO based access control is enabled on client hosts
Apparently neither system-auth tool, nor `samba` role enable GPO
based access control. Therefore adjust /etc/sssd/sssd.conf

--- a/roles/sssd_adgpo_test/handlers/main.yml
+++ b/roles/sssd_adgpo_test/handlers/main.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: restart SSSD
+  service: name=sssd state=restarted
+  become: true
+
 - name: update APT cache
   command: apt-get update
   args:
