--- a/roles/sssd_adgpo_test/tasks/main.yml
+++ b/roles/sssd_adgpo_test/tasks/main.yml
@@ -56,6 +56,14 @@
   notify: restart SSSD
   become: true
 
+- name: run handlers (to restart SSSD)
+  meta: flush_handlers
+
+- name: flush SSSD cache
+  command: sss_cache -E
+  become: true
+  when: sssd_status_out.rc == 0
+
 - set_fact:
     samba_master_fqdn: "{{ samba_master_hostname }}.{{ samba_realm }}"
 
@@ -84,11 +92,6 @@
 - include: gpoobj.yml
   with_items: "{{ test_gpos }}"
   when: samba_flavor == 'master'
-
-- name: flush SSSD cache
-  command: sss_cache -E
-  become: true
-  when: sssd_status_out.rc == 0
 
 - include: check_domain_user_ssh_access.yml
   when: samba_flavor == 'client'
