--- a/setup.yml
+++ b/setup.yml
@@ -8,6 +8,11 @@
     - samba
  
 - hosts:
+    - windows_members
+  roles:
+    - windows_domain_member
+
+- hosts:
     - samba_master_dc
     - samba_domain_controllers
     - samba_clients
