--- a/setup.yml
+++ b/setup.yml
@@ -4,6 +4,14 @@
     - samba_master_dc
     - samba_domain_controllers
     - samba_clients
+  tasks:
+    - include: ./tasks/distupgrade.yml
+      when: use_sisyphus|default('false')|bool
+
+- hosts:
+    - samba_master_dc
+    - samba_domain_controllers
+    - samba_clients
   roles:
     - samba
  
