Enable rdesktop service on windows member servers

--- a/roles/windows_domain_member/tasks/main.yml
+++ b/roles/windows_domain_member/tasks/main.yml
@@ -19,3 +19,12 @@
   win_reboot:
      #-
   when: domain_state.reboot_required|bool
+
+- name: enable remote desktop service
+  win_command: >
+    reg add "HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Terminal Server"
+    /v fDenyTSConnections /t REG_DWORD /d 0 /f
+
+- name: enable rdesktop connections in windows firewall
+  win_command: >
+    netsh firewall set service RemoteDesktop enable
