Moved dist-upgrade and repo related tasks into a separated role

--- a/distupgrade.yml
+++ b/distupgrade.yml
@@ -2,6 +2,8 @@
 
 - hosts:
     - localhost
-  tasks:
-    - include: ./tasks/distupgrade.yml
+  roles:
+    - altlinux-common
+  vars:
+    use_sisyphus: true
   become: true
