--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -6,8 +6,11 @@ samba_admin_pass: peebieY4
 samba_network: 192.168.122.0/24
 samba_dns_forward: 192.168.122.1
 samba_dns_backend: SAMBA_INTERNAL
+# samba_log_level: 50
 samba_master_address: "{{ hostvars[groups['samba_master_dc'][0]].ansible_host }}"
 samba_master_hostname: "{{ hostvars[groups['samba_master_dc'][0]].inventory_hostname_short }}"
+
+use_sisyphus: true
 
 # extra_apt_repos:
 #   - name: localsssd
